--- a/元宇宙.md
+++ b/元宇宙.md
@@ -2,8 +2,6 @@
 
 元宇宙中包括以下主体或客体：
 
-第一个是自然人，自然人是元宇宙的居民。
+第一个是信息海，信息海负责利用程序对信息进行处理。
 
-第二个是信息海，信息海负责信息的输入、处理和输出。
-
-第三个是机械城，机械城负责行动。
+第二个是机械城，机械城负责利用机械对物体进行处理。
