--- a/机械城.md
+++ b/机械城.md
@@ -1,6 +1,6 @@
 # 机械城
 
-在机械城中，主体是机械，客体是材料。机械可以粗略地分为平台机械和零件机械。材料可以粗略地分为外观材料和性能材料。
+在机械城中，主体是机械，客体是材料。机械可以粗略地分为平台机械和零件机械。材料可以粗略地分为外观材料和功能材料。
 
 机械城中包括以下主体或客体：
 
