--- a/机械城.md
+++ b/机械城.md
@@ -1,9 +1,7 @@
 # 机械城
 
-在机械城中，主体是机械，客体是材料。其中，机械粗略地分为Platform机械和Part机械，材料粗略地分为Appearance材料和Performance材料。
-
 机械城中包括以下主体或客体：
 
-第一个是材料库，材料库是材料的集合。
+第一个是机械臂，机械臂负责加工材料库中的材料。
 
-第二个是机械臂，机械臂负责加工材料库中的材料。
+第二个是材料库，材料库是材料的集合。
